--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@react-native-firebase/app": "^14.5.0",
     "@react-native-firebase/auth": "^14.5.0",
     "@react-native-firebase/firestore": "^14.5.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
-    "react-native": "0.67.3"
+    "react-native": "0.67.3",
+    "react-native-reanimated": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.179",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
